RTD-220 collapse arrow fixes RTD-265 fix language translations for queue dashboard

--- a/src/assets/css/element-overrides/_collapse.scss
+++ b/src/assets/css/element-overrides/_collapse.scss
@@ -29,5 +29,8 @@ div.el-collapse {
     .el-icon-arrow-right {
         margin: 0 auto 0 8px;
         transform: rotate(180deg);
+        &.is-active {
+            transform: rotate(90deg);
+        }
     }
 }
